# DjangoOscar

./: README.md  manage.py  pyproject.toml
categories/: serializers.py  urls.py  views.py
frobshop/: product_settings.py  settings.py  urls.py
frobshop/frobshop/: local_settings.py  settings.py  urls.py  wsgi.py
